frontend/accounts/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
