frontend/accounts/k8/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: try
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - try.rebrowse.dev
        - www.try.rebrowse.dev
      secretName: try-rebrowse-dev-tls
  rules:
    - host: try.rebrowse.dev
      http:
        paths:
          - backend:
              serviceName: try
              servicePort: 80
    - host: www.try.rebrowse.dev
      http:
        paths:
          - backend:
              serviceName: try
              servicePort: 80
